<resources>
    <string name="app_name">Good Football Data</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="numberofteams">numberOfTeams:</string>
    <string name="caption">caption:</string>
    <string name="league">league:</string>
    <string name="year">year:</string>
    <string name="currentmatchday">currentMatchday:</string>
    <string name="numberofmatchdays">numberOfMatchdays:</string>
    <string name="numberofgames">numberOfGames:</string>
    <string name="lastupdated">lastUpdated:</string>
    <string name="teams">Teams</string>
    <string name="fixtures">fixtures</string>
    <string name="league_table">League Table</string>
    <string name="tvPlayerName">name</string>
    <string name="tvPlayerPosition">position</string>
    <string name="tvPlayerJerseyNumber">jerseyNumber</string>
    <string name="tvPlayerDateOfBirth">dateOfBirth</string>
    <string name="tvPlayerNationality">nationality</string>
    <string name="tvPlayerContractUntil">contractUntil</string>
    <string name="tvPlayerMarketValue">marketValue</string>
    <string name="tvCompetitionsIdLeagueTable_teamName">teamName</string>
    <string name="tvCompetitionsIdLeagueTable_position">position</string>
    <string name="tvCompetitionsIdLeagueTable_playedGames">playedGames</string>
    <string name="tvCompetitionsIdLeagueTable_points">points</string>
    <string name="tvCompetitionsIdLeagueTable_goals">goals</string>
    <string name="tvCompetitionsIdLeagueTable_goalsAgainst">goalsAgainst</string>
    <string name="tvCompetitionsIdLeagueTable_goalDifference">goalDifference</string>
    <string name="tvCompetitionsIdLeagueTable_wins">wins</string>
    <string name="tvCompetitionsIdLeagueTable_draws">draws</string>
    <string name="tvCompetitionsIdLeagueTable_losses">losses</string>
    <string name="tvCompetitionsIdLeagueTable_homeGoals">homeGoals</string>
    <string name="tvCompetitionsIdLeagueTable_homeGoalsAgainst">homeGoalsAgainst</string>
    <string name="tvCompetitionsIdLeagueTable_homeWins">homeWins</string>
    <string name="tvCompetitionsIdLeagueTable_homeDraws">homeDraws</string>
    <string name="tvCompetitionsIdLeagueTable_homeLosses">homeLosses</string>
    <string name="tvCompetitionsIdLeagueTable_awayGoals">awayGoals</string>
    <string name="tvCompetitionsIdLeagueTable_awayGoalsAgainst">awayGoalsAgainst</string>
    <string name="tvCompetitionsIdLeagueTable_awayWins">awayWins</string>
    <string name="tvCompetitionsIdLeagueTable_awayDraws">awayDraws</string>
    <string name="tvCompetitionsIdLeagueTable_awayLosses">awayLosses</string>
    <string name="btnCompetitions">competitions</string>
    <string name="btnFixtures">Fixtures</string>
    <string name="tvCompetitionsIdFixturesRight_date">date</string>
    <string name="tvCompetitionsIdFixturesRight_status">status</string>
    <string name="tvCompetitionsIdFixturesRight_matchday">matchday</string>
    <string name="tvCompetitionsIdFixturesRight_homeTeamName">homeTeamName</string>
    <string name="tvCompetitionsIdFixturesRight_awayTeamName">awayTeamName</string>
    <string name="tvCompetitionsIdFixturesRight_result">result</string>
    <string name="tvCompetitionsIdFixturesRight_goalsHomeTeam">goalsHomeTeam</string>
    <string name="tvCompetitionsIdFixturesRight_goalsAwayTeam">goalsAwayTeam</string>
    <string name="tvFixtures_date">date</string>
    <string name="tvFixtures_status">status</string>
    <string name="tvFixtures_matchday">matchday</string>
    <string name="tvFixtures_homeTeamName">homeTeamName</string>
    <string name="tvFixtures_awayTeamName">awayTeamName</string>
    <string name="tvFixtures_odds">odds</string>
    <string name="tvFixtures_goalsHomeTeam">goalsHomeTeam</string>
    <string name="tvFixtures_goalsAwayTeam">goalsAwayTeam</string>
</resources>
