<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                >

                <TableRow>


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_teamName"
                        style="@style/activity_competitions_id_league_table_LinearLayout_TeamNames"

                        android:text="@string/tvCompetitionsIdLeagueTable_teamName" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_position"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_position" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_playedGames"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_playedGames" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_points"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_points" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_goals"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_goals" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_goalsAgainst"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_goalsAgainst" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_goalDifference"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_goalDifference" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_wins"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_wins" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_draws"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_draws" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_losses"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_losses" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_homeGoals"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_homeGoals" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_homeGoalsAgainst"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_homeGoalsAgainst" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_homeWins"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_homeWins" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_homeDraws"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_homeDraws" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_homeLosses"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_homeLosses" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_awayGoals"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_awayGoals" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_awayGoalsAgainst"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_awayGoalsAgainst" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_awayWins"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_awayWins" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_awayDraws"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_awayDraws" />


                    <TextView
                        android:id="@+id/tvCompetitionsIdLeagueTable_awayLosses"
                        style="@style/activity_competitions_id_league_table_TextView"
                        android:text="@string/tvCompetitionsIdLeagueTable_awayLosses" />

                </TableRow>
            </TableLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_competitions_id_league_table"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>