<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_Caption"
            style="@style/content_competitions_id_Names"
            android:text="@string/caption" />

        <TextView
            android:id="@+id/tvCompetitionsId_CaptionRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvCompetitionsId_League"
            style="@style/content_competitions_id_Names"
            android:text="@string/league" />

        <TextView
            android:id="@+id/tvCompetitionsId_LeagueRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_Year"
            style="@style/content_competitions_id_Names"
            android:text="@string/year" />

        <TextView
            android:id="@+id/tvCompetitionsId_YearRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_CurrentMatchDay"
            style="@style/content_competitions_id_Names"
            android:text="@string/currentmatchday" />

        <TextView
            android:id="@+id/tvCompetitionsId_CurrentMatchDayRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfMatchdays"
            style="@style/content_competitions_id_Names"
            android:text="@string/numberofmatchdays" />

        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfMatchdaysRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfTeams"
            style="@style/content_competitions_id_Names"
            android:text="@string/numberofteams" />

        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfTeamsRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfGames"
            style="@style/content_competitions_id_Names"
            android:text="@string/numberofgames" />

        <TextView
            android:id="@+id/tvCompetitionsId_NumberOfGamesRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvCompetitionsId_LastUpdated"
            style="@style/content_competitions_id_Names"
            android:text="@string/lastupdated" />

        <TextView
            android:id="@+id/tvCompetitionsId_LastUpdatedRight"
            style="@style/content_competitions_id_Data" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCompetitionsIdTeams"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/teams" />

    <Button
        android:id="@+id/btnCompetitionsIdFixtures"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fixtures" />

    <Button
        android:id="@+id/btnCompetitionsIdLeagueTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/league_table" />
</LinearLayout>