<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">


    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                >

                <TableRow>



                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_date"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_date" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_status"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_status" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_matchday"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_matchday" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_homeTeamName"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_homeTeamName" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_awayTeamName"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_awayTeamName" />



                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_goalsHomeTeam"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_goalsHomeTeam" />

                    <TextView
                        android:id="@+id/tvCompetitionsIdFixturesRight_goalsAwayTeam"
                        style="@style/activity_competitions_id_fixtures_Data"
                        android:text="@string/tvCompetitionsIdFixturesRight_goalsAwayTeam" />

                </TableRow>
            </TableLayout>


            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_competitions_id_fixtures"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />


            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"

                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>