<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="5dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerName"
            style="@style/textLeft"
            android:text="@string/tvPlayerName" />

        <TextView
            android:id="@+id/tvPlayerNameRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvPlayerPosition"
            style="@style/textLeft"
            android:text="@string/tvPlayerPosition" />


        <TextView
            android:id="@+id/tvPlayerPositionRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerJerseyNumber"
            style="@style/textLeft"
            android:text="@string/tvPlayerJerseyNumber" />

        <TextView
            android:id="@+id/tvPlayerJerseyNumberRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerDateOfBirth"
            style="@style/textLeft"
            android:text="@string/tvPlayerDateOfBirth" />

        <TextView
            android:id="@+id/tvPlayerDateOfBirthRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerNationality"
            style="@style/textLeft"
            android:text="@string/tvPlayerNationality" />

        <TextView
            android:id="@+id/tvPlayerNationalityRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerContractUntil"
            style="@style/textLeft"
            android:text="@string/tvPlayerContractUntil" />

        <TextView
            android:id="@+id/tvPlayerContractUntilRight"
            style="@style/textRight" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tvPlayerMarketValue"
            style="@style/textLeft"
            android:text="@string/tvPlayerMarketValue" />

        <TextView
            android:id="@+id/tvPlayerMarketValueRight"
            style="@style/textRight" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"

        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary" />
</LinearLayout>